--- a/_pages/how-buy.html
+++ b/_pages/how-buy.html
@@ -10,11 +10,50 @@ lang: pl_PL
 <div class="container py-4">
 <div class="row mb-5">
 <div class="col">
-<h2>Kupowanie na aukcjach</h2>
-<p class="text-4 text-color-dark">W celu skorzystania z naszej oferty zapraszamy do odwiedzenia strony internetowej, gdzie prezentujemy pełen zestaw prac. Służymy informacjami, poradą i oferujemy miłą atmosferę przy zakupie dzieł sztuki.</p>
-<p class="text-4 text-color-dark">Obiekty mające na stronie www status archiwalne są dziełami pozostającymi poza salonem domu aukcyjnego. Jednak znaczna część tych prac jest wciąż w naszym zasięgu i w razie Państwa zainteresowania chętnie skontaktujemy się z właścicielami z zapytaniem o ich aktualną dostępność do sprzedaży.</p>
-<p class="text-4 text-color-dark">Płatność za zakupione obiekty może zostać przyjęta gotówką, przelewem lub kartą płatniczą.</p>
+<h2>Jak kupować na naszych aukcjach?</h2>
+
+<div class="process process-vertical py-4">
+
+<div class="process-step">
+  <div class="process-step-circle">
+    <strong class="process-step-circle-content">1</strong>
+  </div>
+  <div class="process-step-content">
+    <h4 class="mb-1 text-4 font-weight-bold">Przejrzyj aktualną ofertę aukcyjną</h4>
+    <p class="mb-0 text-dark">Lista naszych aktualnych aukcji znajduję się na stronie <a href="/aukcje/">Aukcje</a>. Większość aukcji ma także swoje katalogi w formacie pdf. Można to sprawdzić wchodząc na konkretną aukcję. Niektóre z naszych aukcji mogą odbywać się w lokalizacjach stacjonarnych, gdzie można oglądać wystawione obiekty. Informacja o takiej formie jest zawsze dostępna na karcie danej aukcji.</p>
+  </div>
+</div>
+
+<div class="process-step">
+  <div class="process-step-circle">
+    <strong class="process-step-circle-content">2</strong>
+  </div>
+  <div class="process-step-content">
+    <h4 class="mb-1 text-4 font-weight-bold">Wybierz jak chcesz licytować</h4>
+    <p class="mb-0 text-dark">Nasze aukcje oferują składanie oferty na obiekt e-mailem, telefonicznie lub osobiście jeśli aukcja przeprowadzana jest w lokalizacji stacjonarnej. Niektóre z naszych aukcji zawierają opcję KUP TERAZ. Oznacza to, że uczestnik aukcji może kupić obiekt za podaną cenę natychmiast.</p>
+  </div>
+</div> 
+ 
+<div class="process-step">
+  <div class="process-step-circle">
+    <strong class="process-step-circle-content">3</strong>
+  </div>
+  <div class="process-step-content">
+    <h4 class="mb-1 text-4 font-weight-bold">Finalizuj licytację</h4>
+    <p class="mb-0 text-dark">Po wygranej licytacji (lub zakupionym obiekcie w opcji KUP TERAZ) musisz zapłacić za obiekt i go odebrać. Możesz także zlecić nam dostarczenie go przesyłką kurierską (za dodatkową opłatą) do wybranego miejsca.</p>
+  </div>
+</div> 
+
+</div>
+
+<h4>Jak zapłacić za wylicytowany/zakupiony obiekt?</h4>
+<p class="text-dark">Opłatę za wylicytowane obiekty trzeba wpłacić w ciągu 7 dni od daty wygranej licytacji. Należność można wpłacić przelewm bankowym na konto Fundacji. Jeśli licytacja odbyła się w lokalizacji stacjonarnej, opłatę można uiścić gotówką. Jeśli zakupiono obiekt w opcji KUP TERAZ jedyną formą zapłaty jest przelew elektroniczny. Transakcje obsługuje serwis przelewy24.pl.</p>
+
+<h4>Odbiór lub wysyłka wylicytowanego obiektu</h4>
+<p class="text-dark">Jeśli licytacja odbyła się w lokalizacji stacjonarnej oraz zapłacono za wylicytowane obiekty - można je odebrać natychmiast po zakończonej lictytacji. Można też zlecić nam ich dostarczenie do wybranego miejsca za dodatkową opłatą. Jeśli zakupiono obiekt w opcji KUP TERAZ oraz należność trafiła na nasze konto bankowe, uzgadniamy z kupującym datę i formę dostarczenia.</p>
+
 </div>
 </div>
 </div>
+
 </section>
