--- a/_pages/how-sell.html
+++ b/_pages/how-sell.html
@@ -1,6 +1,6 @@
 ---
-title: Jak sprzedać obraz, dzieło?
-description: "Chcesz sprzedać dzieło sztuki - obraz, biżuterię, rzeźbę, grafikę, mebel?"
+title: Jak zgłosić obiekty do sprzedaży?
+description: "Chcesz sprzedać dzieło sztuki - obraz, biżuterię, rzeźbę, grafikę, mebel? Nic prostszego. Zadzwoń, napisz e-mail lub skorzystaj z gotowego formularza."
 layout: page
 permalink: /jak-sprzedawac/
 lang: pl_PL
@@ -11,12 +11,53 @@ lang: pl_PL
 <div class="row mb-5">
 <div class="col">
 
-<h2>{{ page.title }}</h2>
-<p class="text-4 text-color-dark">Obiekty przyjmujemy w komis. Nie kupujemy dzieł za gotówkę!</p>
-<p class="text-4 text-color-dark">Zajmujemy się sprzedażą sztuki dawnej, współczesnej i wysokiej klasy antyków. Ze względu na możliwości ekspozycyjne w mniejszym stopniu interesują nas meble i duże obiekty. Promujemy także tzw. Młodą Sztukę poprzez organizowanie cyklicznych aukcji. Oferty dzieł artyści mogą zgłaszać drogą e-mailową.</p>
-<p class="text-4 text-color-dark">Ocena i wycena obiektów oferowanych do sprzedaży za naszym pośrednictwem jest bezpłatna.</p>
-<p class="text-4 text-color-dark">W przypadku większej grupy lub bardziej wartościowych obiektów dojeżdżamy do Klienta.</p>
-<p class="text-4 text-color-dark">Zachęcamy do przesyłania informacji o dziełach za pośrednictwem poczty e-mailowej. W opisie prosimy o przekazanie informacji o wymiarach, technice, sygnaturze artysty oraz wszelkich informacjach dodatkowych (naklejki, napisy na odwrociu, itd.) oraz oczekiwanej kwocie za obiekt. Prosimy o przesyłanie zdjęć. Powinny być to zdjęcia wyraźne, pokazujące lico obiektu, znaki autorskie i inne, np. odwrocie obrazu. Aby uniknąć tzw. blików z lampy błyskowej aparatu, prosimy o robienie zdjęć w pewnej odległości  i pod pewnym kątem od płaskiej powierzchni obiektu. Naturalnie prosimy też o przekazanie danych kontaktowych.</p>
+<h2>Jak sprzedać obiekt w naszym serwisie?</h2>
+
+<div class="process process-vertical py-4">
+
+<div class="process-step">
+  <div class="process-step-circle">
+    <strong class="process-step-circle-content">1</strong>
+  </div>
+  <div class="process-step-content">
+    <h4 class="mb-1 text-4 font-weight-bold">Zgłoszenie obiektu do sprzedaży</h4>
+    <p class="mb-0 text-dark">Aby zgłosić obiekt prosimy najpierw o kontakt telefoniczny. Proszę nie przynosić obiektów do siedziby galerii bez wcześniejszego umówienia się.</p>
+    <p class="mb-0 text-dark">Obiekty do sprzedaży można również zgłaszać za pośrednictwem mediów elektronicznych: przez e-mail albo formularz zgłaszania obiektu do sprzedaży. Można też przesłać informacje oraz zdjęcia obiektów pocztą tradycyjną na adres: Fundacja Nowe Teraz, ul. Zielna 39, 00-108 Warszawa.</p>
+  </div>
+</div>
+
+<div class="process-step">
+  <div class="process-step-circle">
+    <strong class="process-step-circle-content">2</strong>
+  </div>
+  <div class="process-step-content">
+    <h4 class="mb-1 text-4 font-weight-bold">Przygotowanie obiektu do sprzedaży</h4>
+    <p class="mb-0 text-dark">Obiekty przyjęte do sprzedaży przechodzą procedurę weryfikacji wyceny oraz stanu fizycznego i wizulanego. Po ustaleniu szczegółów wyceny aukcyjnej podpisujemy Umowę Komisową. Od tej chwili obiek może być wystawiony do sprzedaży.</p>
+  </div>
+</div> 
+ 
+<div class="process-step">
+  <div class="process-step-circle">
+    <strong class="process-step-circle-content">3</strong>
+  </div>
+  <div class="process-step-content">
+    <h4 class="mb-1 text-4 font-weight-bold">Sprzedaż na aukcji</h4>
+    <p class="mb-0 text-dark">W zależności od ustaleń obiekt zostaje wystawiony na aukcji stacjonarnej i/lub internetowej. Aukcja widoczna będzie na dedykowanej stronie internetowej. Jeśli takie były ustalenia, do aukcji udostępniony bedzie również katalog w wersji elektronicznej, w formacie pdf.</p>
+  </div>
+</div> 
+
+<div class="process-step">
+  <div class="process-step-circle">
+    <strong class="process-step-circle-content">4</strong>
+  </div>
+  <div class="process-step-content">
+    <h4 class="mb-1 text-4 font-weight-bold">Wypłata za sprzedane obiekty</h4>
+    <p class="mb-0 text-dark">Po zakończonej aukcji wypłacamy w ciągu 14 dni należność za sprzedane i opłacone obiekty. Wypłata odbywa się przelewem na wskazane w umowie komisowej konto bankowe.</p>
+  </div>
+</div> 
+
+</div>
+
 </div>
 </div>
 </div>
